# pymodulon

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  MANIFEST.in  README.md  README.rst  Tutorial.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.docker/: Dockerfile
.github/workflows/: main.yml  publish-docker-images.yml  publish-pkg-pypi.yml
docs/: conf.py  index.rst  modules.rst  pymodulon.rst  references.bib  zreferences.bib  zreferences.rst
docs/example_workflow/: characterizing_iModulons.ipynb  creating_an_iModulonDB_page.ipynb  mining_public_expression_databases.rst  quality_control.ipynb  running_ICA.rst
docs/tutorials/: Visualizations.ipynb  additional_functions.ipynb  comparing_imodulons.ipynb  creating_an_imodulondb_dashboard.ipynb  creating_the_gene_table.ipynb  gene_enrichment_analysis.ipynb  imodulon_thresholds.ipynb  imodulondb_site_generation.ipynb  inferring_imodulon_activities_for_new_data.ipynb  introduction_to_the_ica_data_object.ipynb  plotting_functions.ipynb  searching_for_motifs.ipynb  the_ica_data_object.ipynb
example_data/: example_bbh.csv
example_data/example_annotation/data/: gene_info.csv
example_data/example_annotation/sequence_files/: genome.fasta
example_data/modulome_example/data/: GO_annotations.csv  GO_annotations.txt  GO_enrichments.csv  biocyc_operon_annotations.txt  gene_info.csv  iModulon_table.csv  kegg_module_enrichments.csv  kegg_pathway_enrichments.csv  sample_table.csv
example_data/modulome_example/sequence_files/: genome.gff3
notebooks/: Tutorial.ipynb  Visualizations.ipynb  gene_annotation.ipynb  iModulonDB.ipynb  iModulonDB_setup.ipynb  iModulon_characterization.ipynb
notebooks/motifs/: 2.fasta
notebooks/motifs/2/: logo1.eps  logo2.eps  logo3.eps  logo4.eps  logo5.eps  logo_rc1.eps  logo_rc2.eps  logo_rc3.eps  logo_rc4.eps  logo_rc5.eps  meme.html  meme.txt  meme.xml
pymodulon/: compare.py  core.py  enrichment.py  gene_util.py  imodulondb.py  io.py  motif.py  plotting.py  plotting.py.orig  test.py  util.py  visualization.py
pymodulon/data/meme/: SwissRegulon_e_coli.meme  collectf.meme  dpinteract.meme  prodoric.meme  regtransbase.meme
pymodulon/org_comp_data/: org_compare.npz  org_compare_lable.txt
pymodulon/test/: org_compar_te.py  test.py
pymodulon/test/data/: .~lock.test_S_matrix.csv#  10genes.json  ecoli_gene_table.csv  ecoli_imodulon_table.csv  ecoli_prot.fasta  ecoli_sample_table.csv  mtb_A.csv  mtb_prot.fasta  test_A_matrix.csv
pymodulon/test/modulome_data/: A.csv  M.csv  TRN.tsv  gene_table.csv  sample_table.csv
pymodulon/test/precise_data/: gene_table.csv  sample_table.csv  test_X_matrix.csv
src/pymodulon/: __init__.py  compare.py  core.py  enrichment.py  example_data.py  gene_util.py  imodulondb.py  io.py  motif.py  plotting.py  util.py  visualization.py
src/pymodulon/data/: example_data.py  example_tpm.csv
src/pymodulon/data/bbh/: example_bbh.csv
src/pymodulon/data/ecoli/: GO_example_annotations.txt  biocyc_operon_annotations.txt  eggNOG_annotations.txt  example_tpm.csv  gene_table.csv  genome.gff3  proteins.faa  sample_table.csv  trn.csv  truncated_proteins.faa
src/pymodulon/data/example_data/modulome_example/data/: GO_annotations.csv  TRN.tsv  eggNOG.annotations  gene_info.csv  gene_table.csv  kegg_pathway_enrichments.csv
src/pymodulon/data/imodulondb/: e_coli_gene_links.csv  e_coli_tf_links.csv
src/pymodulon/example_data/modulome_example/data/: TRN.tsv  kegg_mapping.csv
src/pymodulon/example_data/modulome_example/sequence_files/: CDS.fna
tests/: conftest.py  org_compar_te.py  test.py  test_compare.py  test_core.py  test_enrichment.py  test_gene_util.py  test_io.py  test_plotting.py
tests/data/: test_genome.gff3
tests/data/ecoli_data/: trn.csv
tests/data/models/: mini_model.json
tests/precise_data/: imodulon_table.csv  sample_table.csv  test_S_matrix.csv  trn.csv
