[metadata]
name = pymodulon
version = attr: pymodulon.__version__
url = https://github.com/SBRG/pymodulon
download_url = https://pypi.org/project/pymodulon/
project_urls =
    Source = https://github.com/SBRG/pymodulon
    Tracker = https://github.com/SBRG/pymodulon/issues/
author = Anand V. Sastry
author_email = avsastry@eng.ucsd.edu
maintainer = Anand V. Sastry
maintainer_email = avsastry@eng.ucsd.edu
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
license = MIT
license_file = LICENSE
description = Python package for analyzing and visualizing iModulons.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    python
	iModulon
	RNA-seq
	transcriptomics
	ICA
	regulation
platforms =
    GNU/Linux
    Mac OS X > 10.7
    Microsoft Windows >= 7

[options]
install_requires =
    adjusttext >= 0.7
    beautifulsoup4 >= 4.9
    biopython
    graphviz
    jupyter >= 1.0
    lxml >= 4.6
    matplotlib >= 3.2
    matplotlib_venn >= 0.11
    numpy >= 1.19
    openpyxl >= 2.5
    pandas >= 1.0
    scikit-learn >= 0.23
    scipy >= 1.5
    seaborn >= 0.10
    statsmodels >= 0.9
    tqdm >= 4.47



python_requires = ~=3.6
include_package_data = True
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
include =
    pymodulon

[options.extras_require]
dev =
    bumpversion
    pre-commit
    tox
docs =
    sphinx ~= 3.5
    sphinx-autoapi ~= 1.7
    sphinx_rtd_theme
    sphinxcontrib-bibtex ~= 2.1
    nbsphinx
tests =
    pytest
    pytest-cov
    coverage[toml]
all =
    %(dev)s
    %(docs)s

[flake8]
ignore = E203, E266, E501, W503, F401, C901
max-line-length = 88
max-complexity = 18
exclude_types = ["ipynb"]
